--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -122,7 +123,7 @@
     </div>
 
     <template class="js-pokemon-template">
-        <li class="js-pokemon-item col-4 d-flex align-items-stretch mb-5">
+        <li class="js-pokemon-item col-4 d-flex align-items-stretch mb-5" data-aos="fade-up">
             <div class="pokemon-item position-relative d-flex flex-column justify-content-between w-100 rounded-3 px-2">
                 <button class="pokemon-bookmark-star js-pokemon-bookmark-star d-inline-block border-0 bg-transparent">
 
@@ -158,6 +159,10 @@
     </template>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script src="//code.jivosite.com/widget/kVP3LOQdJt" async></script>
+
     <script src="./js/pokemons.js"></script>
     <script src="./js/main.js"></script>
 </body>
